--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="icon" href="icons/icon-192.png">
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; color: #222; }
     h2 { text-align: center; margin-bottom: 20px; }
     .panel { background: #fff; padding: 15px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 6px; }
-    .panel h3 { margin-top: 0; margin-bottom: 10px; border-bottom: 1px solid #ddd; padding-bottom: 5px; }
+    .panel h3 { margin: 0 0 10px; border-bottom: 1px solid #ddd; padding-bottom: 5px; }
     label { display: block; margin: 8px 0; }
-    input, select { width: 100%; padding: 6px; margin-top: 3px; }
-    button { padding: 10px 20px; margin-top: 10px; background: #007acc; color: white; border: none; border-radius: 4px; cursor: pointer; }
+    input, select { width: 100%; padding: 6px; margin-top: 3px; border: 1px solid #ccc; border-radius: 4px; }
+    button { padding: 10px 16px; margin-top: 10px; background: #007acc; color: #fff; border: none; border-radius: 4px; cursor: pointer; }
     button:disabled { background: #ccc; cursor: not-allowed; }
-    .error { color: red; font-weight: bold; }
-    .success { color: green; font-weight: bold; }
+    .error { color: #b00020; font-weight: 600; }
+    .success { color: #0a7a2f; font-weight: 600; }
+
+    /* Modal */
+    .modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.5); }
+    .modal-content { background:#fff; margin:10% auto; padding:20px; border-radius:8px; width:320px; box-shadow:0 4px 12px rgba(0,0,0,0.2); }
+    .modal h3 { margin:0 0 10px; }
+    .modal .actions { display:flex; gap:8px; justify-content:flex-end; margin-top:12px; }
+    .close { float:right; font-size:20px; cursor:pointer; line-height:1; }
   </style>
 </head>
 <body>
@@ -26,37 +33,36 @@
 
 <div class="panel">
   <h3>Dane ogólne</h3>
-  <label>Miejsce wykonania próby: <input id="miejsce" type="text"></label>
-  <label>Data (DD.MM.YYYY): <input id="data" type="text"></label>
-  <label>Godzina (HH:MM): <input id="godzina" type="text"></label>
-  <label>Osoba wystawiająca kartę: <input id="osobaWystawiajaca" type="text"></label>
+  <label>Miejsce wykonania próby: <input id="miejsce" type="text" autocomplete="off"></label>
+  <label>Data (DD.MM.YYYY): <input id="data" type="text" inputmode="numeric" placeholder="DD.MM.RRRR"></label>
+  <label>Godzina (HH:MM): <input id="godzina" type="text" inputmode="numeric" placeholder="HH:MM"></label>
+  <label>Osoba wystawiająca kartę: <input id="osobaWystawiajaca" type="text" autocomplete="off"></label>
   <label>Próbę wykonano z:
     <select id="probaZ">
       <option value="">-- wybierz --</option>
-      <option value="Lokomotywa prowadząca">Lokomotywa prowadząca</option>
-      <option value="Inna lokomotywa">Inna lokomotywa</option>
-      <option value="Urządzenie stacjonarne">Urządzenie stacjonarne</option>
+      <option value="Lokomotywa">Lokomotywa prowadząca</option>
+      <option value="Inna">Inna lokomotywa</option>
+      <option value="Stacjonarne">Urządzenie stacjonarne</option>
     </select>
   </label>
-  <label id="oznaczenieLok" style="display:none;">Oznaczenie lokomotywy: <input id="lokomotywa" type="text"></label>
-  <label id="stanowisko" style="display:none;">Numer stanowiska: <input id="stanowiskoNr" type="text"></label>
-  <label>Numer pierwszego wagonu: <input id="zaLok1" type="text"></label>
-  <label>Numer drugiego wagonu: <input id="zaLok2" type="text"></label>
-  <label>Numer przedostatniego wagonu: <input id="koniec1" type="text"></label>
-  <label>Numer ostatniego wagonu: <input id="koniec2" type="text"></label>
-  <label>Osoba wykonująca próbę: <input id="osobaProba" type="text"></label>
-  <label>Maszynista: <input id="maszynista" type="text"></label>
-  <label>Kierownik pociągu: <input id="kierownik" type="text"></label>
+  <label>Osoba wykonująca próbę: <input id="osobaProba" type="text" autocomplete="off"></label>
+  <label>Maszynista: <input id="maszynista" type="text" autocomplete="off"></label>
+  <label>Kierownik pociągu: <input id="kierownik" type="text" autocomplete="off"></label>
+  <!-- Numery wagonów na końcu -->
+  <label>Numer pierwszego wagonu: <input id="zaLok1" type="text" autocomplete="off"></label>
+  <label>Numer drugiego wagonu: <input id="zaLok2" type="text" autocomplete="off"></label>
+  <label>Numer przedostatniego wagonu: <input id="koniec1" type="text" autocomplete="off"></label>
+  <label>Numer ostatniego wagonu: <input id="koniec2" type="text" autocomplete="off"></label>
 </div>
 
 <div class="panel">
   <h3>Próba hamulca</h3>
-  <label>Masa ogólna składu [t]: <input id="masaSkladu" type="number"></label>
-  <label>Masa ogólna pociągu [t]: <input id="masaPociagu" type="number"></label>
-  <label>Masa hamująca rzeczywista [t]: <input id="mhr" type="number"></label>
-  <label>Procent wymagany [%]: <input id="pw" type="number"></label>
-  <label>Ciśnienie przewodu głównego [MPa]: <input id="cisnienieGl" type="number" step="0.01"></label>
-  <label>Ciśnienie przewodu dodatkowego [MPa]: <input id="cisnienieDod" type="number" step="0.01"></label>
+  <label>Masa ogólna składu [t]: <input id="masaSkladu" type="number" step="1" min="0"></label>
+  <label>Masa ogólna pociągu [t]: <input id="masaPociagu" type="number" step="1" min="0"></label>
+  <label>Masa hamująca rzeczywista [t]: <input id="mhr" type="number" step="1" min="0"></label>
+  <label>Procent wymagany [%]: <input id="pw" type="number" step="1" min="0" max="100"></label>
+  <label>Ciśnienie przewodu głównego [MPa]: <input id="cisnienieGl" type="number" step="0.01" min="0"></label>
+  <label>Ciśnienie przewodu dodatkowego [MPa]: <input id="cisnienieDod" type="number" step="0.01" min="0"></label>
   <button id="btnOblicz" type="button">Oblicz</button>
 </div>
 
@@ -67,62 +73,131 @@
   <button id="drukujBtn" type="button" disabled>Drukuj</button>
 </div>
 
+<!-- Modal: Oznaczenie lokomotywy -->
+<div id="lokModal" class="modal" aria-hidden="true">
+  <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="lokTitle">
+    <span class="close" onclick="closeModal('lokModal')" aria-label="Zamknij">&times;</span>
+    <h3 id="lokTitle">Oznaczenie lokomotywy</h3>
+    <input id="lokomotywa" type="text" autocomplete="off" placeholder="np. EU07-123">
+    <div class="actions">
+      <button onclick="closeModal('lokModal')">OK</button>
+    </div>
+  </div>
+</div>
+
+<!-- Modal: Numer stanowiska -->
+<div id="stanModal" class="modal" aria-hidden="true">
+  <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="stanTitle">
+    <span class="close" onclick="closeModal('stanModal')" aria-label="Zamknij">&times;</span>
+    <h3 id="stanTitle">Numer stanowiska</h3>
+    <input id="stanowiskoNr" type="text" autocomplete="off" placeholder="np. ST-05">
+    <div class="actions">
+      <button onclick="closeModal('stanModal')">OK</button>
+    </div>
+  </div>
+</div>
+
 <script>
-document.getElementById("probaZ").addEventListener("change", function() {
-  document.getElementById("oznaczenieLok").style.display =
-    (this.value === "Lokomotywa prowadząca" || this.value === "Inna lokomotywa") ? "block" : "none";
-  document.getElementById("stanowisko").style.display =
-    (this.value === "Urządzenie stacjonarne") ? "block" : "none";
-});
+  // Wywołanie modali po wyborze źródła próby
+  document.getElementById("probaZ").addEventListener("change", function() {
+    const v = this.value;
+    if (v === "Lokomotywa" || v === "Inna") openModal('lokModal');
+    else if (v === "Stacjonarne") openModal('stanModal');
+  });
+  function openModal(id) { document.getElementById(id).style.display = "block"; }
+  function closeModal(id) { document.getElementById(id).style.display = "none"; }
 
-document.getElementById("btnOblicz").addEventListener("click", oblicz);
-document.getElementById("drukujBtn").addEventListener("click", drukuj);
+  document.getElementById("btnOblicz").addEventListener("click", oblicz);
+  document.getElementById("drukujBtn").addEventListener("click", drukuj);
 
-function oblicz() {
-  const masaSkladu = parseFloat(document.getElementById("masaSkladu").value);
-  const masaPociagu = parseFloat(document.getElementById("masaPociagu").value);
-  const mhr = parseFloat(document.getElementById("mhr").value);
-  const pw = parseFloat(document.getElementById("pw").value);
-  const cisGl = parseFloat(document.getElementById("cisnienieGl").value);
-  const cisDod = parseFloat(document.getElementById("cisnienieDod").value);
+  function oblicz() {
+    const masaSkladu = parseFloat(document.getElementById("masaSkladu").value);
+    const masaPociagu = parseFloat(document.getElementById("masaPociagu").value);
+    const mhr = parseFloat(document.getElementById("mhr").value);
+    const pw = parseFloat(document.getElementById("pw").value);
+    const cisGl = parseFloat(document.getElementById("cisnienieGl").value);
+    const cisDod = parseFloat(document.getElementById("cisnienieDod").value);
 
-  if (isNaN(masaSkladu) || isNaN(masaPociagu) || isNaN(mhr) || isNaN(pw)) {
-    document.getElementById("komunikat").innerHTML = "<span class='error'>Uzupełnij wszystkie pola!</span>";
-    return;
+    if (isNaN(masaSkladu) || isNaN(masaPociagu) || isNaN(mhr) || isNaN(pw)) {
+      document.getElementById("komunikat").innerHTML = "<span class='error'>Uzupełnij wszystkie pola!</span>";
+      return;
+    }
+
+    const Mo = (masaSkladu >= 200) ? masaSkladu : masaPociagu;
+    const Mhw = Math.ceil((Mo * pw) / 100);
+    const Pr = Math.floor((mhr * 100) / Mo);
+
+    document.getElementById("wynik").innerHTML = `Mo: ${Mo} t<br>Mhw: ${Mhw} t<br>Pr: ${Pr}%`;
+
+    let komunikat = "";
+    if (Pr < pw) komunikat += "<span class='error'>Dodaj wagony lub zmniejsz prędkość!</span><br>";
+    else komunikat += "<span class='success'>Warunki spełnione ✅</span><br>";
+    if (!isNaN(cisGl) && cisGl !== 0.5) komunikat += "<span class='error'>Sprawdź dopuszczalne odchylenia przewodu głównego!</span><br>";
+    if (!isNaN(cisDod) && (cisDod !== 0.5 && cisDod !== 0.8)) komunikat += "<span class='error'>Sprawdź dopuszczalne odchylenia przewodu dodatkowego!</span><br>";
+
+    document.getElementById("komunikat").innerHTML = komunikat;
+    document.getElementById("drukujBtn").disabled = false;
   }
 
-  const Mo = (masaSkladu >= 200) ? masaSkladu : masaPociagu;
-  const Mhw = Math.ceil((Mo * pw) / 100);
-  const Pr = Math.floor((mhr * 100) / Mo);
+  function drukuj() {
+    const now = new Date();
+    const footer = `Wygenerowano: ${now.toLocaleDateString()} ${now.toLocaleTimeString()}<br>Wygenerowano z systemu ESKA by klawinsky & Copilot`;
+    const get = id => document.getElementById(id)?.value || "-";
+    const wynik = document.getElementById("wynik").innerHTML || "-";
 
-  document.getElementById("wynik").innerHTML = `Mo: ${Mo} t<br>Mhw: ${Mhw} t<br>Pr: ${Pr}%`;
+    const html = `
+      <html>
+        <head>
+          <meta charset="UTF-8">
+          <title>Karta próby hamulca</title>
+          <link rel="stylesheet" href="print.css">
+        </head>
+        <body>
+          <h2>Elektroniczna Karta Próby Hamulca</h2>
+          <table>
+            <tr><th>Miejsce wykonania próby</th><td>${get("miejsce")}</td></tr>
+            <tr><th>Data</th><td>${get("data")}</td></tr>
+            <tr><th>Godzina</th><td>${get("godzina")}</td></tr>
+            <tr><th>Osoba wystawiająca</th><td>${get("osobaWystawiajaca")}</td></tr>
+            <tr class="section-title"><td colspan="2">Dane próby</td></tr>
+            <tr><th>Próbę wykonano z</th><td>${get("probaZ")}</td></tr>
+            <tr><th>Oznaczenie lokomotywy</th><td>${get("lokomotywa")}</td></tr>
+            <tr><th>Numer stanowiska</th><td>${get("stanowiskoNr")}</td></tr>
+            <tr><th>Numery wagonów za lokomotywą</th><td>${get("zaLok1")}, ${get("zaLok2")}</td></tr>
+            <tr><th>Numery wagonów na końcu składu</th><td>${get("koniec1")}, ${get("koniec2")}</td></tr>
+            <tr class="section-title"><td colspan="2">Parametry i wyniki</td></tr>
+            <tr><th>Masa ogólna składu</th><td>${get("masaSkladu")} t</td></tr>
+            <tr><th>Masa ogólna pociągu</th><td>${get("masaPociagu")} t</td></tr>
+            <tr><th>Masa hamująca rzeczywista</th><td>${get("mhr")} t</td></tr>
+            <tr><th>Procent wymagany</th><td>${get("pw")}%</td></tr>
+            <tr><th>Obliczenia (Mo, Mhw, Pr)</th><td>${wynik}</td></tr>
+            <tr><th>Ciśnienie przewodu głównego</th><td>${get("cisnienieGl")} MPa</td></tr>
+            <tr><th>Ciśnienie przewodu dodatkowego</th><td>${get("cisnienieDod")} MPa</td></tr>
+            <tr class="section-title"><td colspan="2">Podpisy pracowników</td></tr>
+            <tr><th>Osoba wykonująca próbę</th><td class="signature-line">${get("osobaProba")}</td></tr>
+            <tr><th>Maszynista</th><td class="signature-line">${get("maszynista")}</td></tr>
+            <tr><th>Kierownik pociągu</th><td class="signature-line">${get("kierownik")}</td></tr>
+          </table>
+          <footer>${footer}</footer>
+        </body>
+      </html>
+    `;
 
-  let komunikat = "";
-  if (Pr < pw) {
-    komunikat += "<span class='error'>Dodaj wagony lub zmniejsz prędkość!</span><br>";
-  } else {
-    komunikat += "<span class='success'>Warunki spełnione ✅</span><br>";
+    const w = window.open("", "_blank");
+    w.document.open();
+    w.document.write(html);
+    w.document.close();
+    w.focus();
+    w.print();
   }
-  if (!isNaN(cisGl) && cisGl !== 0.5) komunikat += "<span class='error'>Sprawdź dopuszczalne odchylenia przewodu głównego!</span><br>";
-  if (!isNaN(cisDod) && (cisDod !== 0.5 && cisDod !== 0.8)) komunikat += "<span class='error'>Sprawdź dopuszczalne odchylenia przewodu dodatkowego!</span><br>";
 
-  document.getElementById("komunikat").innerHTML = komunikat;
-  document.getElementById("drukujBtn").disabled = false;
-}
+  // Rejestracja service workera (opcjonalnie)
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('./sw.js').catch(err => console.error('SW registration failed:', err));
+    });
+  }
+</script>
 
-function drukuj() {
-  const now = new Date();
-  const footer = `Wygenerowano: ${now.toLocaleDateString()} ${now.toLocaleTimeString()}<br>
-  Wygenerowano z systemu ESKA by klawinsky & Copilot`;
-
-  const get = id => document.getElementById(id)?.value || "-";
-  const wynik = document.getElementById("wynik").innerHTML || "-";
-
-  const printWindow = window.open("", "_blank");
-  printWindow.document.write(`
-    <html>
-      <head>
-        <title>Karta próby hamulca</title>
-        <link rel="stylesheet" href="print.css">
-      </head>
-
+</body>
+</html>
